--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/Solvent-01.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/Solvent-01.jrxml
@@ -354,13 +354,6 @@
 				<textFieldExpression><![CDATA["ได้มาตรวจสอบ"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="45" y="304" width="19" height="20" uuid="df871ae6-5c66-4a92-b7bc-2e2998e8e25e"/>
-				<textElement verticalAlignment="Bottom">
-					<font fontName="DejaVu Sans" size="14"/>
-				</textElement>
-				<textFieldExpression><![CDATA[($P{factory} && $P{factory} != null)? "\u2611" : "\u2610"]]></textFieldExpression>
-			</textField>
-			<textField>
 				<reportElement x="75" y="304" width="440" height="23" uuid="32cb4c1a-1e81-4670-a2e3-c2a6d99793a9"/>
 				<textElement verticalAlignment="Bottom">
 					<font fontName="TH Sarabun New" size="16"/>
@@ -373,13 +366,6 @@
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
 				<textFieldExpression><![CDATA["สารละลายประเภทไฮโดรคาร์บอนในอุตสาหกรรมต่าง ๆ"]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="45" y="357" width="19" height="20" uuid="7da61318-b7b6-4197-adcc-f2de8bf4a60c"/>
-				<textElement verticalAlignment="Bottom">
-					<font fontName="DejaVu Sans" size="14"/>
-				</textElement>
-				<textFieldExpression><![CDATA[($P{service} && $P{service} != null)? "\u2611" : "\u2610"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="73" y="356" width="274" height="23" uuid="ea0d7bd7-71e4-422c-b53b-1490ee723c8b"/>
@@ -976,6 +962,20 @@
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
 				<textFieldExpression><![CDATA["ข้าพเจ้า"]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement positionType="FixRelativeToBottom" x="48" y="303" width="20" height="22" uuid="0ffed6d5-e10d-474e-9bb5-595c3daa6a4e"/>
+				<textElement verticalAlignment="Bottom">
+					<font fontName="DejaVu Sans" size="15"/>
+				</textElement>
+				<textFieldExpression><![CDATA["\u2610"]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement positionType="FixRelativeToBottom" x="48" y="355" width="20" height="22" uuid="1a120e36-f3ea-4208-8b9d-e196f58e2c6b"/>
+				<textElement verticalAlignment="Bottom">
+					<font fontName="DejaVu Sans" size="15"/>
+				</textElement>
+				<textFieldExpression><![CDATA["\u2610"]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
